[package]
name = "enigmap"
version = "0.1.0"
authors = ["Petr Volf <Petr.volf216@gmail.com>"]
edition = "2018"
description = "Hexagonal map generator and renderer"
license = "MIT"
repository = "https://github.com/TheNumerus/enigmap"
exclude = [
    ".vscode/*",
    "out/*"
]

[dependencies]
rand = "0.7.0"
noise = "0.5.1"
glium = "0.24.0"
toml = "0.4.10"
png = "0.14.1"
num_cpus = "1.10.1"
crossbeam = "0.7.1"
svg = "0.5.12"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "hexmap"
harness = false

[[bench]]
name = "renderers"
harness = false

[profile.release]
debug = true