[package]
name = "enigmap-renderer"
version = "0.1.0"
authors = ["Petr Volf <Petr.volf216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigmap = { path = "../enigmap" }
png = "0.16.6"
svg = "0.8"
num_cpus = "1.13.0"
rand = "0.7.3"
glium = "0.27.0"
toml = "0.5.6"
crossbeam-utils = "0.7"

[dev-dependencies]
ansi_term = "0.11.0"


[[example]]
name = "generator"